# automaton

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  RULES.md
automaton/: grid_1d.cpp  grid_1d.hpp  grid_2d.cpp  grid_2d.hpp  grid_3d.cpp  grid_3d.hpp  grid_area.cpp  grid_area.hpp  grid_window.cpp  grid_window.hpp  main.cpp
automaton/app/: animation.cpp  animation.hpp  app_config.cpp  app_config.hpp  app_window.cpp  app_window.hpp  canvas.cpp  canvas.hpp  controller.cpp  controller.hpp  grid_area.cpp  grid_area.hpp  window.cpp  window.hpp
automaton/base/: cell.hpp  grid.hpp  grid.ipp  logic.hpp
automaton/cli/: cli.cpp  cli.hpp
automaton/core/: ant_rule.cpp  ant_rule.hpp  config.cpp  config.hpp  defaults.hpp  dims.hpp  engine_type.cpp  engine_type.hpp  grid.cpp  grid.hpp  join_options.hpp  life_rule.cpp  life_rule.hpp  rule_option.cpp  rule_option.hpp  surface_type.cpp  surface_type.hpp
automaton/engines/: ant.cpp  ant.hpp  engine.hpp  life.cpp  life.hpp  sand.cpp  sand.hpp  wolfram.cpp  wolfram.hpp
automaton/grid/: _1d.cpp  _1d.hpp  _2d.cpp  _2d.hpp  _3d.cpp  _3d.hpp  base_grid.hpp  grid_1d.cpp  grid_1d.hpp  grid_2d.cpp  grid_2d.hpp  grid_3d.cpp  grid_3d.hpp
automaton/logic/: base_logic.hpp  fall.cpp  fall.hpp  falling.cpp  falling.hpp  life.cpp  life.hpp  wolfram.cpp  wolfram.hpp
src/: falling_logic.cpp  falling_logic.hpp  field_window.cpp  field_window.hpp  graphic.cpp  graphic.hpp  grid_2d.cpp  grid_2d.hpp  grid_3d.cpp  grid_3d.hpp  grid_area.cpp  grid_area.hpp  grid_window.cpp  grid_window.hpp  main.cpp
(+22 files in other folders)
